<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hipsterbility</string>
    <string name="capture_service_label">Hipsterbility Capture Service</string>
    <string name="choose_session">Select session </string>
    <string name="err_no_todos_for_session">This session has no todos yet.</string>
    <string name="start_session">Start Session</string>
    <string name="todos_title">Todos preview</string>
    <string name="sessions_for_user">Sessions</string>
    <string name="select_session_first">No session selected. Please select a session first.</string>
    <string name="settings_user_group_title">User</string>
    <string name="settings_server_group_title">Server Settings</string>
    <string name="pref_summary_server_name">Hostname or IP of the Hipsterbility server</string>
    <string name="pref_title_server_name">Server</string>
    <string name="pref_summary_server_port">Port for the server where the Node.js API is running on. Default: 3000.
    </string>
    <string name="pref_title_server_port">Port</string>
    <string name="pref_summary_user_name">Username for service provider.</string>
    <string name="pref_title_user_name">Username</string>
    <string name="pref_summary_password">Password for the user above.</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_test_server">Test Server Settings</string>
    <string name="loading_sessions">Retreiving Sessions from Server</string>
    <string name="loading_message">Loading...</string>
    <string name="pref_title_enable_root">Enable Root features</string>
    <string name="pref_summary_enable_root">This enables native methods for taking screenshots and record the screen as
        a video on KitKat (Android 4.4) devices
    </string>
    <string name="pref_title_max_connections">Maximum number of connections to the server</string>
    <string name="pref_summary_max_connections">Sets the maximum number of HTTP connections to the server. This limits
        the number of files uploaded simultaneously if the server is running on a low performance machine.
    </string>
    <string name="pref_key_server">server</string>
    <string name="pref_key_port">port</string>
    <string name="pref_key_max_connection">max_connections</string>
    <string name="pref_key_user_name">user</string>
    <string name="pref_key_password">password</string>
    <string name="pref_key_enable_root">root</string>
    <string name="pref_summary_test_server">Tries to connect to the provided server. </string>
    <string name="alert_title_server_connection_failed">Connction to server failed</string>
    <string name="alert_message_server_connection_failed">Check settings for server address and port, as well as user
        credential correctness.
    </string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="pref_key_button_test_server">test_connection</string>
    <string name="authentication_user">Login</string>
    <string name="authentication_user_message">Logging into the service to get sessions</string>
    <string name="toast_username_or_password_missing">Username and/or password may not be empty. Please provide
        credentials in settings screen.
    </string>
    <string name="action_reload">Reload</string>
    <string name="menu_settings">Settings</string>
    <string name="action_start_session">Start Session</string>
    <string name="msg_server_found">Server is online</string>
    <string name="msg_server_not_found">Connection to server could not be established. Check server address and port.
    </string>
    <string name="settings_progress_testing_server">Testing server connection...</string>
    <string name="settings_advanced_group_title">Advanced Settings</string>
    <string name="pref_key_retries">max_retries</string>
    <string name="pref_title_retries">Maximum retries</string>
    <string name="pref_key_timeout">timeout</string>
    <string name="pref_title_timeout">Connection Timeout</string>
    <string name="pref_summary_retries">Number of retries when connecting to the server. Only change if errors occur.
    </string>
    <string name="pref_summary_timeout">Only change on slow network connection.</string>
    <string name="todos">Todos:</string>
    <string name="tasks">Tasks:</string>
    <string name="intent_action_start_capture">START_CAPTURE</string>
    <string name="intent_action_stop_capture">STOP_CAPTURE</string>
    <string name="intent_action_pause_capture">PAUSE_CAPTURE</string>
    <string name="intent_action_resume_capture">RESUME_CAPTURE</string>
    <string name="hipsterbility">Hipsterbility</string>
    <string name="click_for_testing">Tap to start UX testing</string>
    <string name="notification_dismiss">Dismiss</string>
    <string name="action_upload">UPLOAD</string>
    <string name="action_stop_service">STOP_SERVICE</string>
    <string name="action_upload_notification">UPLOAD_NOTIFICATION</string>
    <string name="notification_title_upload_data">Upload collected data</string>
    <string name="notification_text_upload_data">Tap to start upload</string>
    <string name="upload_service_label">Hipsterbility Upload Service</string>
    <string name="session">Session</string>
    <string name="notification_text_upload_data_complete">Data upload successful.</string>
    <string name="dialog_title_delete_files">Upload successful</string>
    <string name="dialog_title_delete_text">Delete temporary files from disk?</string>
    <string name="notification_action_upload_delete">Delete files</string>
    <string name="action_delete_files">DELETE_FILES</string>
</resources>
